tests/ui/panic-handler/panic-handler-bad-signature-3.stderr
error: function should have one argument
  --> $DIR/panic-handler-bad-signature-3.rs:9:1
   |
LL | fn panic() -> ! {
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

